hotfix: Correção nos métodos de salvar e recuperar nos DAOs